# alivemouse

./: .gitignore  LICENSE  next.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: build_tauri.yaml  build_tauri.yml  reusable-build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  page.tsx
src/app/FindMouse/: FindMouse.module.css  page.tsx
